# SentinelDQ

./: .dockerignore  .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  datasets.example.json  datasets.postgres.example.json  datasets.production.example.json  pyproject.toml
.github/workflows/: test.yml
docs/: system_blueprint.md
scripts/: run_once.py
src/sentineldq/: cli.py  config.py  models.py  runner.py
src/sentineldq/alerts/: __init__.py
src/sentineldq/detect/: freshness.py  null_spike.py  registry.py  schema_drift.py  volume.py
src/sentineldq/metadata/: store.py
src/sentineldq/profiler/: column_profiler.py  dataset_profiler.py
src/sentineldq/sources/: __init__.py
tests/: conftest.py  test_alerts.py  test_cli.py  test_config.py  test_detect_freshness.py  test_detect_null_spike.py  test_detect_registry.py  test_detect_schema_drift.py  test_detect_volume.py  test_e2e_run_once.py  test_metadata_store.py  test_sources.py
