[project]
name = "sentineldq"
version = "0.1.0"
description = "Metadata-driven data observability platform"
requires-python = ">=3.10"
dependencies = ["duckdb>=0.10"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sentineldq = "sentineldq.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]